Bug 158807 - It's extremely slow to show hidden files and folders in my home directory
Summary: It's extremely slow to show hidden files and folders in my home directory
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-05 15:38 UTC by Grissiom
Modified: 2008-03-13 22:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grissiom 2008-03-05 15:38:09 UTC
Version:            (using Devel)
Installed from:    Compiled sources

when 'show hidden files' in my home directory(30 folders, 29 files), dolphin will hang up for about 5~10 seconds. That's unbearable.
Comment 1 Peter Penz 2008-03-05 15:54:07 UTC
Just to be 100 % sure: your compiled version is on trunk, not on the 4.0.x branch? Could you please tell me your CPU + GHz values? The bottleneck on trunk is the blending of the icons, which seems to be incredible slow -> I'll have to find another way for the blending...
Comment 2 Grissiom 2008-03-05 16:07:47 UTC
Ah, sorry that I forgot to mention that I'm using OpenSUSE's UNSTABLE repository. I think the version is on trunk. My CPU is AMD Turion64X2, 1.7G.
Comment 3 Peter Penz 2008-03-13 22:31:58 UTC
SVN commit 785369 by ppenz:

Remove the semitransparent effect for hidden items in the IconManager, it just takes too much time at this part of the code. David Faure suggested some alternative ideas, I hope I can try them before KDE 4.1. Currently it is more important to keep the performance high.

BUG: 158807

 M  +0 -30     iconmanager.cpp  
 M  +0 -3      iconmanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=785369