Remove the semitransparent effect for hidden items in the IconManager, it just takes too much time at this part of the code. David Faure suggested some alternative ideas, I hope I can try them before KDE 4.1. Currently it is more important to keep the performance high.

BUG: 158807

svn path=/trunk/KDE/kdebase/apps/; revision=785369